<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">铂爬虫</string>
    <string name="forums">论坛</string>
    <string name="torrent">种子</string>
    <string name="remote">远程控制</string>
    <string name="misc">其他</string>
    <string name="message">消息中心</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="exit">退出</string>
    <string name="account">账号</string>
    <string name="notifications">通知</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="security_code">验证码</string>
    <string name="next_page">下一页</string>
    <string name="loading">加载中…</string>
    <string name="pull_to_refresh_pull_label">下拉可刷新…</string>
    <string name="pull_to_refresh_release_label">松开可刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_tap_label">点击可刷新…</string>
    <string name="pull_up_to_refresh_pull_label">上拉可刷新…</string>
    <string name="pull_to_add_next_page">上拉可添加下一页…</string>
    <string name="release_to_add_next_page">松开可添加下一页…</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="subject">主题</string>
    <string name="body">正文</string>
    <string name="loaded">数据已更新</string>
    <string name="get_security_code">正在获取验证码…</string>
    <string name="failed_to_download_security_code">获取验证码失败，请重试</string>
    <string name="exit_message">确定退出？</string>
    <string name="log_out_message">确定注销？</string>
    <string name="confirm">提示</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username">请输入账号</string>
    <string name="input_security_code">请输入验证码</string>
    <string name="log_out">注销</string>
    <string name="refresh">刷新</string>
    <string name="try_to_login">正在尝试登录…</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="login_error">登录失败，请确认账号、密码以及验证码无误后再重试</string>
    <string name="ellipsis" translatable="false">…</string>
    <string name="not_login">请重新登录</string>
    <string name="new_topic">新建主题</string>
    <string name="reply">回复</string>
    <string name="body_is_empty">请输入正文内容</string>
    <string name="subject_is_empty">请输入一个主题</string>
    <string name="topic_is_adding">正在发布新主题</string>
    <string name="add_topic_failed">发帖失败，请重试</string>
    <string name="add_topic_succeeded">发帖成功</string>
    <string name="reply_is_empty">请输入回复的内容</string>
    <string name="reply_is_adding">正在回复</string>
    <string name="edit_succeeded">编辑成功</string>
    <string name="committing">正在提交数据</string>
    <string name="reply_succeeded">回复完成</string>
    <string name="edit_failed">编辑失败</string>
    <string name="reply_failed">回复失败，请重试</string>
    <string name="refresh_failed">数据获取失败，请稍后重试</string>
    <string name="commit_failed">数据提交失败，请稍后重试</string>
    <string name="connection_refused">无法连接到服务器</string>
    <string name="time_out">连接超时</string>
    <string name="chat_room">聊天室</string>
    <string name="newbie">新手上路</string>
    <string name="movie">电影院</string>
    <string name="music">音乐</string>
    <string name="quote">引用</string>
    <string name="pm">PM</string>
    <string name="edit">编辑</string>
    <string name="delete_post_msg">确认删除该回复？</string>
    <string name="delete_topic_msg">确认删除该主题？</string>
    <string name="delete">删除</string>
    <string name="deleting">正在删除…</string>
    <string name="markAsRead">标记为已读</string>
    <string name="forum_settings">论坛设定</string>
    <string name="topics_per_page">每页主题数</string>
    <string name="setting_num_hint">0默认，100最大</string>
    <string name="posts_per_page">每页帖子数</string>
    <string name="forum_signature">签名档</string>
    <string name="view_signatures">查看签名</string>
    <string name="view_avatars">显示头像</string>
    <string name="click_on_topic">点击主题时</string>
    <string name="go_to_first_page">查看首页</string>
    <string name="go_to_last_page">查看尾页</string>
    <string name="signature_hint">允许使用BBCode代码。最大图片尺寸为500*200，只有第一张图片会显示。</string>
    <string name="save">保存</string>
    <string name="forward">跳转</string>
    <string name="pageIndex">第%1$d页</string>

    <!-- setting -->
    <string name="download_image">获取网络图片</string>
    <string name="sound_on">提示音</string>
    <string name="remote_server">远程服务器</string>
    <string name="reset">重置</string>
    <string name="reset_message">确定重置此按钮以上的个人设置为默认值吗？</string>
    <string name="clear_cache">清除缓存</string>
    <string name="cache_cleared">缓存已清除</string>
    <string name="check_update">检查更新</string>
    <string name="searching_for_update">正在搜索更新…</string>
    <string name="searching_update_fail">搜索更新失败，请稍后重试</string>
    <string name="latest_version">当前为最新版本</string>
    <string name="update">升级</string>
    <string name="update_info">版本：%1$s\n新版大小： %2$s</string>
    <string name="device_name_setting_hint">设备名</string>
    <string name="server_addr">服务器地址</string>
    <string name="auto_refresh">回复后自动刷新</string>
    <string name="enable_proxy">开启代理</string>
    <string name="animation">动画</string>
    <string name="anim_fade">淡入淡出</string>
    <string name="anim_standard">标准</string>
    <string name="anim_tablet">板块</string>
    <string name="anim_cube_in">盒子（内）</string>
    <string name="anim_cube_out">盒子（外）</string>
    <string name="anim_flip_vertical">垂直翻动</string>
    <string name="anim_flip_horizontal">水平翻动</string>
    <string name="anim_stack">堆叠</string>
    <string name="anim_zoom_in">放大</string>
    <string name="anim_zoom_out">缩小</string>
    <string name="anim_rotate_up">向上旋转</string>
    <string name="anim_rotate_down">向下旋转</string>
    <string name="anim_accordion">手风琴</string>
    <string name="anim_panel">面板</string>
    <string name="anim_window">窗</string>
    <string name="anim_jump_up">向上跳跃</string>
    <string name="anim_jump_down">向下跳跃</string>
    <string name="apply">应用</string>
    <string name="name">名称</string>
    <string name="ip_port">IP端口</string>
    <string name="set_as_default">设置为默认</string>
    <string name="fill_in_the_blanks">请填写空白处</string>
    <string name="add">添加</string>
    <string name="no_remote_setting">请先添加远程服务器</string>
    <string name="saved">保存成功</string>
    <string name="label">标签</string>
    <string name="scan">扫描二维码</string>
    <string name="optional">可选</string>
    <string name="no_setting_data">请添加设置</string>
    <string name="notification_title">HDSky提醒</string>
    <string name="have_new_message">你有未读消息，点击查看</string>
    <string name="no_msg_selected">请选择站内信</string>

    <!-- torrent -->
    <string name="bookmark">收藏</string>
    <string name="unbookmark">取消收藏</string>

    <!-- download -->
    <string name="download_complete">下载完毕，点击安装</string>
    <string name="app_version_tag">版本：</string>
    <string name="app_size_tag">大小：</string>
    <string name="update_date_tag">更新：</string>
    <string name="delete_message">确定删除？</string>

    <!-- remote -->
    <string name="rutorrent" translatable="false">ruTorrent</string>
    <string name="task_info">大小：%1$s - 已上传：%2$s（分享率：%3$s）  下载速度：%4$s/s  上传速度：%5$s/s</string>
    <string name="ip_hint" translatable="false">127.0.0.1:80</string>
    <string name="no_task_selected">请选择一个任务</string>
    <string name="remove_file">删除文件</string>
    <string name="download">下载</string>
    <string name="rss">订阅</string>
    <string name="download_dir">下载目录</string>
    <string name="download_link">下载链接</string>
    <string name="invalidate_ip">非法IP</string>
    <string name="disk">硬盘</string>
    <string name="get_disk_space_failed">获取硬盘信息失败</string>
    <string name="status">状态</string>
    <string name="navigation_status_showall">全部</string>
    <string name="navigation_status_onlydown">下载中</string>
    <string name="navigation_status_onlyup">上传中</string>
    <string name="navigation_status_onlyactive">活动</string>
    <string name="navigation_status_onlyinactive">停止</string>
    <string name="unlabled">其他</string>
    <string name="http_401">HTTP 401，账号或密码错误</string>

    <!-- pt site -->
    <string name="pt_site" translatable="false">PT</string>
    <string name="init">初始化</string>
    <string name="initialize_completed">初始化完成</string>
    <string name="connecting">通讯中…</string>
    <string name="unintialized">未初始化</string>
    <string name="torrents">种子</string>
    <string name="OpenCD">原抓</string>
    <string name="adult">成人</string>
    <string name="media">影视&amp;音乐</string>
    <string name="game">游戏&amp;软件</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>