<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dip" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/rss_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingLeft="42dip"
            android:paddingRight="5dp"
            android:background="@drawable/setting_strip_top_sel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:paddingLeft="5dip"
            android:text="@string/label" />
    </FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/rss_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_strip_bottom_sel"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textUri"
            android:paddingLeft="42dip"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:paddingLeft="5dip"
            android:text="@string/rss" />
    </FrameLayout>

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_bg_sel"
        android:text="@string/scan" />
    
     <Button
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/log_out_btn_sel"
        android:text="@string/delete"
        android:visibility="gone" />
    

</LinearLayout>