<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_strip_top_sel" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/download_image" />

            <org.hdstar.widget.LTAToggleButton
                android:id="@+id/fetchImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/transparent_checkbox_bg_sel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_strip_middle_sel" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/sound_on" />

            <org.hdstar.widget.LTAToggleButton
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/transparent_checkbox_bg_sel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_strip_middle_sel" >

            <TextView
                android:id="@+id/auto_refresh_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/auto_refresh" />

            <org.hdstar.widget.LTAToggleButton
                android:id="@+id/auto_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/transparent_checkbox_bg_sel" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/setting_strip_bottom_sel"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:inputType="text"
                android:paddingLeft="56dip"
                android:paddingRight="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/device_name_setting_hint" />
        </RelativeLayout>

        <TextView
            android:id="@+id/clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/setting_strip_top_sel"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:paddingLeft="5dip"
            android:text="@string/clear_cache" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_strip_bottom_sel"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/checkUpdate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:paddingLeft="5dip"
                android:text="@string/check_update" />

            <Button
                android:id="@+id/download_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/download_task_icon_sel"
                android:onClick="onClick"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/log_out_btn_sel"
            android:onClick="onClick"
            android:text="@string/log_out" />
    </LinearLayout>

</ScrollView>