<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" >

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical|right"
                                android:text="@string/topics_per_page"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <EditText
                                android:id="@+id/topics_per_page"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/setting_num_hint"
                                android:layout_weight="2"
                                android:inputType="number" >

                                <requestFocus />
                            </EditText>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical|right"
                                android:text="@string/posts_per_page"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <EditText
                                android:id="@+id/posts_per_page"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/setting_num_hint"
                                android:layout_weight="2"
                                android:inputType="number" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout5"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"  >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:gravity="center_vertical|right"
                                android:layout_weight="1"
                                android:text="@string/forum_signature"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <EditText
                                android:id="@+id/signature"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:hint="@string/signature_hint"
                                android:inputType="textMultiLine" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout6"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" >

                            <Button
                                android:id="@+id/save"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="onForumSaveClick"
                                android:text="@string/save" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </LinearLayout>
